<resources>
    <string name="app_name">YourTurn</string>
    <string name="action_settings">Settings</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_hint">Find Contacts</string>
    <string name="menu_search">Search Contacts </string>
    <string name="group_name">Enter event name</string>
    <string name="group_creation_label">Provide a event name and optional event icon</string>
    <string name="participantText">Participants</string>
    <string name="new_group_label">New Event Group</string>

    <!-- CLOUDINARY SETTINGS -->
    <string name="cloudinary_cloud_name">yourturncloud</string>
    <string name="cloudinary_api_key">944682836341525</string>
    <string name="cloudinary_api_secret">jiE8lj-7AiwS6dcP5ri_h9mBXpk</string>
    <string name="cloudinary_url">cloudinary://944682836341525:jiE8lj-7AiwS6dcP5ri_h9mBXpk@yourturncloud</string>

    <!-- HEROKU APP CONFIGURATION -->
    <string name="app_id">sMVHq9lgSmQUtNxyEdsBJaUvZUkqB7eKg</string>
    <string name="master_key">3L3nrFqVD2Ilg_6RXuMusgVba0_uARi6E</string>
    <string name="server">https://yourturnapp.herokuapp.com/parse/</string>
    <string name="required_group_name">Please enter event name, only alphanumeric allowed</string>
    <string name="preference_file_key">login_credentials</string>
    <string name="events">Events</string>
    <string name="chats">Chats</string>

    <!-- APPLOZIC CONFIGURATION -->
    <string name="applozic_api_key">2366a6745edce9236ec8c81235d04b123</string>

    <string name="pick_image_intent_text">Group icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="group_fragment_label">No Event(s)</string>
    <string name="chat_text">No Chat(s)</string>

    <string name="content_authority">com.social.yourturn</string>
    <string name="createdOn">created on</string>
    <string name="split_bill">Split the bill</string>
    <string name="dialog_custom_title">Enter total bill value below</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="custom_dialog_error_validation">Please enter valid numeric value</string>
    <string name="positive_error_validation">Please enter positive value only</string>
    <string name="currency">$</string>
    <string name="zero_default_values">0.00</string>
    <string name="duplicate_group_name_error">Duplicate event name</string>
    <string name="new_group_creation">Your new event have been created !</string>
    <string name="duplicate_group_name_err">Duplicate event name</string>
    <string name="prompt_group_name">Please type event name first</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_text">Profile</string>
    <string name="username">Fouchimi Ousmane</string>
    <string name="edit_your_name">Edit your name</string>
    <string name="profile_warning">This is not your username or pin, this name will be visible to your YourTurn contacts only.</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="ok_text">Ok</string>
    <string name="cancel_text">Cancel</string>
    <string name="edit_name">Edit Name</string>
    <string name="your_yourturn_contact_name">Your YourTurn contact name</string>
    <string name="choose_profile_image">Choose profile Image</string>
    <string name="thumbnail_updated_msg">eventUrl updated !</string>
    <string name="validate">Validate</string>
    <string name="current_user">You</string>
    <string name="user_credentials">credentials</string>

    <string name="gcm_sender_id">id:1098418675632</string>
    <string name="yourturn_server_gcm_id">AIzaSyB23E-VBvU2NBNThultMJUXeEfiVdF1RxI</string>
    <string name="confirm_price">Confirm price</string>
    <string name="refused_payment_message">You denied to pay</string>
    <string name="accepted_payment_message">You accept to pay</string>
    <string name="connection_title_msg">Connection problem</string>
    <string name="connection_msg_content">Turn on your internet connection</string>
    <string name="validate_bill_text">Validate bill</string>
    <string name="friendList">friendList</string>
    <string name="sharedAmount">sharedAmount</string>
    <string name="eventId">eventId</string>
    <string name="paymentReceiver">paymentReceiver</string>
    <string name="result_value">resultValue</string>
    <string name="payment_successful_msg">Payment was saved successfully</string>
    <string name="totalAmount">totalAmount</string>
    <string name="delete_invalid_users">Delete All Invalid Users</string>
    <string name="view_group_record">View event records</string>
    <string name="send_message">Send message</string>
    <string name="title_activity_confirm_payment">Group Records</string>
    <string name="selected_event">selected_event</string>
    <string name="selected_event_id">selected_event_id</string>
    <string name="profileDataReceiver">profileDataReceiver</string>

    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="contact_list">contactList</string>

    <string name="google_places_api_key">AIzaSyCuC9Fatk3IvjCKrjw2rwpmzsRH6JiTREQ</string>
    <string name="event_activity">Event Activity</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="location_permission_rationale">Location permission is needed for core functionality</string>
    <string name="proceed_text">Proceed</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="paid_text">paid</string>
    <string name="requestedValueText">requested</string>
    <string name="YesBtn">Yes</string>
    <string name="NoBtn">No</string>
    <string name="undo_text">Undo</string>
    <string name="requestedText">requested: $%1$s</string>
    <string name="paidText">paid: $%1$s</string>
    <string name="scoreValue">$%1$s</string>
    <string name="scoreText">score</string>
    <string name="profile_path">profile_path</string>
    <string name="profile_name">profile_name</string>
    <string name="deleteEvent">Delete Event</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="change_event_picture">Change event Picture</string>
    <string name="change_event_thumbnail">Change event thumbnail</string>

    <string name="applozic_test_key">AIzaSyAYB1vPc4cpn_FJv68eS_ZGe1UasBNwxLI</string>
    <string name="contacts_title">Contacts</string>
    <string name="message_hint">Type a message</string>
    <string name="btnSend">Send</string>
    <string name="friendDesc">Friend</string>
    <string name="meDesc">Me</string>
    <string name="selected_contact">selected_contact</string>
    <string name="senderId">senderId</string>
    <string name="receiverId">receiverId</string>
    <string name="message">message</string>
    <string name="createdAt">createdAt</string>
    <string name="updatedAt">updatedAt</string>
    <string name="resetCounter">resetCounter</string>
    <string name="todayText">Today</string>
    <string name="current_score">current_score</string>

</resources>
