<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="social.com.yourturn.GroupListActivity">

    <item
        android:id="@+id/validateButton"
        android:orderInCategory="98"
        android:title="@string/validate"
        android:visible="false"
        android:icon="@drawable/ic_check_circle"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/splitMenuAction"
        android:orderInCategory="99"
        android:title="@string/split_bill"
        app:showAsAction="never" />

    <item android:id="@+id/validateBillAction"
        android:orderInCategory="100"
        android:title="@string/validate_bill_text"
        android:visible="false"
        android:icon="@drawable/ic_check_circle_green"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>