<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/regularLayout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_margin="@dimen/mar_4dp">

        <FrameLayout
            android:layout_width="@dimen/pic_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/member_thumbnail"
                android:src="@drawable/default_profile"
                android:layout_width="@dimen/pic_size"
                android:layout_height="@dimen/pic_size"
                android:layout_gravity="center_vertical"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/member_name"
                android:layout_width="110dp"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/pad_12dp"
                android:layout_marginStart="@dimen/pad_12dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:maxWidth="@dimen/txt_100dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_20sp" />

            <TextView
                android:id="@+id/currencyOne"
                android:layout_width="@dimen/w_12dp"
                android:layout_height="@dimen/txt_45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/mar_4dp"
                android:layout_marginRight="@dimen/mar_4dp"
                android:gravity="center_vertical"
                android:text="@string/currency"
                android:textSize="@dimen/txt_22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/requestValue"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="@dimen/mar_15dp"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:layout_marginRight="@dimen/mar_4dp"
                    android:layout_marginEnd="@dimen/mar_4dp"
                    android:ellipsize="end"
                    android:gravity="start|center|bottom"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/zero_default_values"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/txt_20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/requestValueText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/requestedValueText"/>
            </LinearLayout>


            <TextView
                android:id="@+id/currencyTwo"
                android:layout_width="@dimen/w_12dp"
                android:layout_height="@dimen/txt_45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/mar_4dp"
                android:layout_marginRight="@dimen/mar_4dp"
                android:gravity="center_vertical"
                android:text="@string/currency"
                android:textSize="@dimen/txt_22sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/paidValue"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="@dimen/mar_15dp"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:layout_marginRight="@dimen/mar_4dp"
                    android:layout_marginEnd="@dimen/mar_4dp"
                    android:ellipsize="end"
                    android:gravity="start|center|bottom"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/zero_default_values"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/txt_20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/paidValueText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/paid_text"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/check_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_done_green_48dp"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
