<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.social.yourturn.GroupActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_group"
    android:background="@android:color/white">


    <com.social.yourturn.utils.CircularImageView
        android:id="@+id/groupImageView"
        android:layout_width="@dimen/pic_size"
        android:layout_height="@dimen/pic_size"
        android:baselineAlignBottom="true"
        android:onClick="snapGroupPhoto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/mar_16dp"
        android:layout_marginLeft="@dimen/mar_16dp"
        android:layout_marginBottom="@dimen/mar_8dp"
        android:src="@drawable/ic_group_black_36dp"
        app:layout_constraintBottom_toTopOf="@+id/groupTextViewLabel"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/groupNameText"
        android:layout_width="0dp"
        android:layout_height="@dimen/pic_size"
        android:layout_marginEnd="@dimen/mar_8dp"
        android:layout_marginLeft="@dimen/mar_8dp"
        android:layout_marginRight="@dimen/mar_8dp"
        android:layout_marginStart="@dimen/mar_8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/group_name"
        android:inputType="textPersonName"
        android:paddingTop="@dimen/pad_8dp"
        android:paddingLeft="@dimen/pad_12dp"
        android:paddingBottom="@dimen/pad_12dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/groupImageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/groupImageView"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/groupTextViewLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mar_8dp"
        android:layout_marginLeft="@dimen/mar_16dp"
        android:layout_marginRight="@dimen/mar_16dp"
        android:layout_marginStart="@dimen/mar_8dp"
        android:layout_marginTop="18dp"
        android:padding="@dimen/pad_8dp"
        android:hint="@string/group_creation_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupNameText" />

    <TextView
        android:id="@+id/participantsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mar_8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="@dimen/mar_8dp"
        android:layout_marginTop="11dp"
        android:padding="@dimen/pad_8dp"
        android:text="@string/participantText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupTextViewLabel" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/participantsTextView"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/mar_8dp"
        android:layout_marginStart="@dimen/mar_8dp"
        android:elevation="15dp"
        android:src="@drawable/ic_check_white_48dp"
        app:layout_anchor="@id/groupTextViewLabel"
        app:layout_anchorGravity="center|bottom"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/participantsTextView"
        app:layout_constraintHorizontal_bias="1.0" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/selected_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/mar_8dp"
        android:layout_marginLeft="@dimen/mar_8dp"
        android:layout_marginRight="@dimen/mar_8dp"
        android:layout_marginStart="@dimen/mar_8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fab">

    </android.support.v7.widget.RecyclerView>


</android.support.constraint.ConstraintLayout>
